--- a/kviz-zivotinje/index.html
+++ b/kviz-zivotinje/index.html
@@ -46,7 +46,7 @@
                         <h2 class="winner" style="font-size:2rem">GlagoZoo</h2>
                         <br>
                         <hr class="style-two">
-                        <p>Interaktivni kviz u kojemu se pojavljuju hrvatski crkvenoslavenski nazivi životinja napisani glagoljicom. Igrači biraju jedan točan odgovor između četiriju ponuđenih opcija i testiraju svoje znanje glagoljice i hrvatskoga crkvenoslavenskoga. Kako bi se bolje usvojila glagoljica, i suvremene su hrvatske riječi napisane njome.</p>
+                        <p>Interaktivni kviz u kojemu se pojavljuju hrvatski crkvenoslavenski nazivi životinja napisani glagoljicom. Igrači biraju jedan točan odgovor između četiriju ponuđenih opcija i testiraju svoje znanje glagoljice i hrvatskoga crkvenoslavenskoga. Kako bi se bolje usvojila glagoljica, i suvremene su hrvatske riječi napisane njome. Ilustracije za igri stvorene su s pomoću umjetne inteligencije.</p>
                         <img src="naslovnica.png" style="max-width: 100%;">
                         <button class="btn uglata gla init-page__btn">igraj</button>
                                                 <br><p style="text-align: center;">Ovaj je kviz izrađen u sklopu projekta <a href="https://stin.hr/sadrzaj/digistin/" target="_blank">DigiSTIN</a> i <a href="https://stin.hr/sadrzaj/hrvatskoglagoljski-animalisticki-leksik/" target="_blank">HAL</a>.</p>
